<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="facebook_app_id" translatable="false">821656608968804</string>
    <string name="security_question">Security Question</string>
    <string name="security_question_des">In case you forget password, you can use it.</string>
    <string name="enter_a_security_question">Enter a security question to reset your password.</string>
    <string name="hint_ques">What is your favorite color?</string>
    <string name="hint_ans">Please enter your answer</string>
    <string name="confirm">confirm</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="statistics">Statistics</string>
    <string name="change_theme">Change theme</string>
    <string name="hashtags">Hashtags</string>
    <string name="use_password">Use password</string>
    <string name="change_passcode">Change passcode</string>
    <string name="feedback">Feedback</string>
    <string name="share">Share</string>
    <string name="policy">Policy</string>
    <string name="our_other_apps_ad">Our other apps (AD)</string>
    <string name="mood_button">Mood button</string>
    <string name="how_are_you_today">How are you today?</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_calendar">Calendar</string>
    <string name="txt_today">Today</string>
    <string name="Mon">Mon</string>
    <string name="tue">Tue</string>
    <string name="wed">wed</string>
    <string name="thu">Thu</string>
    <string name="fri">Fri</string>
    <string name="sat">Sat</string>
    <string name="sun">Sun</string>
    <string name="sunday">Sunday</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="txtOK">OK</string>
    <string name="back_navigation">Back navigation</string>
    <string name="trend">Trend</string>
    <string name="loading_ad">Loading ad...</string>
    <string name="mood_statistics">Mood statistics</string>
    <string name="last_7_days">Last 7 days</string>
    <string name="last_30_days">Last 30 days</string>
    <string name="last_90_days">Last 90 days</string>
    <string name="all">All</string>
    <string name="latest_first">Latest First</string>
    <string name="oldest_first">Oldest First</string>
    <string name="diary">diary</string>
    <string name="there_are_no_hashtag_in_your_diary">There are no hashtag in your diary</string>
    <string name="the_answer_is_not_correct">The answer is not correct</string>
</resources>