<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_radius_6"
    android:backgroundTint="@color/popupColor">

    <TextView
        android:id="@+id/last_7_days"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingHorizontal="@dimen/margin_8"
        android:paddingVertical="@dimen/margin_4"
        android:text="@string/last_7_days"
        android:textColor="@color/darkTextColor"
        android:textSize="@dimen/text_s_10"
        app:layout_constraintBottom_toTopOf="@id/last_30_days"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/last_30_days"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingHorizontal="@dimen/margin_8"
        android:paddingVertical="@dimen/margin_4"
        android:text="@string/last_30_days"
        android:textColor="@color/darkTextColor"
        android:textSize="@dimen/text_s_10"
        app:layout_constraintBottom_toTopOf="@id/last_90_days"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/last_7_days" />

    <TextView
        android:id="@+id/last_90_days"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingHorizontal="@dimen/margin_8"
        android:paddingVertical="@dimen/margin_4"
        android:text="@string/last_90_days"
        android:textColor="@color/darkTextColor"
        android:textSize="@dimen/text_s_10"
        app:layout_constraintBottom_toTopOf="@id/all"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/last_30_days" />

    <TextView
        android:id="@+id/all"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingHorizontal="@dimen/margin_8"
        android:paddingVertical="@dimen/margin_4"
        android:text="@string/all"
        android:textColor="@color/darkTextColor"
        android:textSize="@dimen/text_s_10"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/last_90_days" />

</androidx.constraintlayout.widget.ConstraintLayout>