<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <androidx.cardview.widget.CardView
        android:id="@+id/ln_calendar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/white"
        android:layout_marginHorizontal="16dp"
        app:cardCornerRadius="20dp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#4278FE"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/btn_backMonth"
                    android:layout_width="36dp"
                    android:layout_height="36dp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="48dp"
                    android:padding="8dp"
                    android:src="@drawable/ic_back_month" />

                <TextView
                    android:id="@+id/tv_curenTime"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginVertical="16dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:fontFamily="@font/roboto_medium"
                    android:textColor="?attr/textColor"
                    android:textSize="20sp" />

                <ImageView
                    android:id="@+id/btn_nextMonth"
                    android:layout_width="36dp"
                    android:layout_height="36dp"
                    android:layout_gravity="center_vertical"
                    android:padding="8dp"
                    android:src="@drawable/ic_next_month" />

                <TextView
                    android:id="@+id/tv_today"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginVertical="16dp"
                    android:layout_marginEnd="4dp"
                    android:gravity="center"
                    android:text="@string/txt_today"
                    android:padding="8dp"
                    android:textColor="?attr/textColor"
                    android:textSize="14sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="8dp"
                android:layout_marginTop="12dp"
                android:background="#80C2C2C2"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/sun"
                    android:textColor="@color/transparent_80"
                    android:textSize="14sp" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/Mon"
                    android:textColor="@color/transparent_80"
                    android:textSize="14sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/tue"
                    android:textColor="@color/transparent_80"
                    android:textSize="14sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/wed"
                    android:textColor="@color/transparent_80"
                    android:textSize="14sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/thu"
                    android:textColor="@color/transparent_80"
                    android:textSize="14sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/fri"
                    android:textColor="@color/transparent_80"
                    android:textSize="14sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/sat"
                    android:textColor="@color/transparent_80"
                    android:textSize="14sp" />


            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rcv_calendar"
                android:layout_width="match_parent"
                android:layout_height="240dp"
                android:layout_marginHorizontal="8dp"
                android:layout_marginTop="8dp"
                tools:listitem="@layout/calendar_cell" />

            <LinearLayout
                android:id="@+id/btn_ok"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_btn_confirm"
                android:layout_gravity="center"
                android:layout_marginBottom="12dp"
                android:layout_marginHorizontal="16dp"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/txtOK"
                    android:textColor="@color/secondary"
                    android:textSize="16sp"
                    android:fontFamily="@font/roboto_medium"
                    android:layout_marginVertical="8dp"
                    android:layout_marginHorizontal="20dp"
                    />
            </LinearLayout>


        </LinearLayout>

    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>