<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/backgroundImage"
    android:backgroundTint="@null"
    tools:context="com.sutech.diary.view.calendar.CalendarFragment">

    <LinearLayout
        android:id="@+id/ln_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/topAppBarColor"
        android:orientation="horizontal"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/btn_back"
            android:layout_width="42dp"
            android:layout_height="42dp"
            android:layout_marginVertical="16dp"
            android:layout_marginStart="8dp"
            android:padding="8dp"
            android:src="@drawable/ic_back_btn" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="12dp"
            android:fontFamily="@font/roboto_medium"
            android:text="@string/title_calendar"
            android:textColor="@color/colorTextPrimary"
            android:textSize="20sp" />
    </LinearLayout>

    <com.donkingliang.consecutivescroller.ConsecutiveScrollerLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="12dp"
        app:layout_constraintBottom_toTopOf="@+id/layoutAdsCalendar"
        app:layout_constraintTop_toBottomOf="@+id/ln_toolbar">

        <androidx.cardview.widget.CardView
            android:id="@+id/ln_calendar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            app:cardBackgroundColor="@color/white"
            app:cardCornerRadius="20dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#4278FE"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/btn_backMonth"
                        android:layout_width="36dp"
                        android:layout_height="36dp"
                        android:layout_gravity="center_vertical"
                        android:layout_marginStart="48dp"
                        android:padding="8dp"
                        android:src="@drawable/ic_back_month" />

                    <TextView
                        android:id="@+id/tv_curenTime"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginVertical="16dp"
                        android:layout_weight="1"
                        android:fontFamily="@font/roboto_medium"
                        android:gravity="center"
                        android:textColor="@color/colorTextPrimary"
                        android:textSize="20sp" />

                    <ImageView
                        android:id="@+id/btn_nextMonth"
                        android:layout_width="36dp"
                        android:layout_height="36dp"
                        android:layout_gravity="center_vertical"
                        android:padding="8dp"
                        android:src="@drawable/ic_next_month" />

                    <TextView
                        android:id="@+id/tv_today"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginVertical="16dp"
                        android:layout_marginEnd="4dp"
                        android:gravity="center"
                        android:padding="8dp"
                        android:text="@string/txt_today"
                        android:textColor="@color/colorTextPrimary"
                        android:textSize="14sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="8dp"
                    android:layout_marginTop="12dp"
                    android:background="@color/white"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/Mon"
                        android:textAllCaps="true"
                        android:textColor="@color/black"
                        android:textSize="14sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/tue"
                        android:textAllCaps="true"
                        android:textColor="@color/black"
                        android:textSize="14sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/wed"
                        android:textAllCaps="true"
                        android:textColor="@color/black"
                        android:textSize="14sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/thu"
                        android:textAllCaps="true"
                        android:textColor="@color/black"
                        android:textSize="14sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/fri"
                        android:textAllCaps="true"
                        android:textColor="@color/black"
                        android:textSize="14sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/sat"
                        android:textAllCaps="true"
                        android:textColor="@color/black"
                        android:textSize="14sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/sun"
                        android:textAllCaps="true"
                        android:textColor="@color/black"
                        android:textSize="14sp" />
                </LinearLayout>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rcv_calendar"
                    android:layout_width="match_parent"
                    android:layout_height="240dp"
                    android:layout_marginHorizontal="8dp"
                    android:layout_marginTop="8dp"
                    tools:listitem="@layout/calendar_cell" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/tvTimeDay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="18dp"
            android:fontFamily="@font/roboto_medium"
            android:textColor="@color/colorTextPrimary"
            android:textSize="@dimen/text_s_16"
            android:paddingTop="20dp"
            android:text="@string/app_name"

            app:layout_constraintStart_toStartOf="parent" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="18dp"
            android:clipToPadding="true"
            android:paddingBottom="@dimen/img_padding_large"
            tools:layout_editor_absoluteX="0dp">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rcv_diary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clipToPadding="false"
                android:nestedScrollingEnabled="false"
                tools:ignore="UnusedAttribute" />

        </RelativeLayout>

        <com.sutech.common.text.TextViewArt
            android:id="@+id/tvNotFoundDiary"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:gravity="center"
            android:visibility="gone"
            android:text="@string/not_found_diary"
            android:textColor="@color/colorTextPrimary"
            android:textSize="@dimen/text_s_14"
            android:textStyle="normal"/>

    </com.donkingliang.consecutivescroller.ConsecutiveScrollerLayout>

    <LinearLayout
        android:id="@+id/layoutAdsCalendar"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent">

        <TextView
            android:id="@+id/viewGoneAdGallery"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="Loading ad..."
            android:textColor="@color/black" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>